# Suvarnam

./: .clangd  .gitignore  CMakeLists.txt  README.md
TQlib/: core.tq
TQlib/helper/: TQstrcmp.c  printer.c
include/SymbolTable/: SymbolTable.hpp  SymbolTableInternal.hpp
include/ast/: ast.h
include/backend/codegen/: codegen.hpp
include/builtin/: builtin.h
include/cmd-exec/: cmd-exec.h  cmd-exec.hpp
include/codegen/: codegen.hpp
include/eval/: eval.h
include/frontend/parser/: parser_helpers.h
include/frontend/semantic/: TypeChecker.hpp  TypeResolver.hpp  semantic.hpp
include/frontend/typereslover/: typereslover.hpp
include/import/: import.h
include/lexer/: lexer.h
include/middle-end/HIRGen/: HIRGen.hpp
include/middle-end/MAST-Gen/: Mast_gen.hpp
include/middle-end/SymbolTable/: BuiltinRegistry.hpp  SymbolTable.hpp  SymbolTableInternal.hpp
include/middle-end/typechecker/: typecheck.h
include/parser/: parser_helpers.h
include/semantic/: semantic.hpp
include/shared/: HIRNode.hpp  M_node.hpp  enums.h  nodes.h  structs.h
include/stdlibs/: stdlibs.h
include/utils/: colors.h
include/utils/error_handler/: error.h
include/utils/utf-8_lib/: utf8.h
source/: test.tq
src/: main.c
src/SymbolTable/: EvalSymbolTable.cpp  SemanticSymbolTable.cpp  SymbolTable.cpp
src/ast/: ASTHelper.c  ASTNode.c  assigner.c  env.c
src/backend/codegen/: codegen.cpp  emit_assign.cpp  emit_expr.cpp  handle_fn.cpp  handle_loops.cpp  helper.cpp  list_handler.cpp  op_handler.cpp  str_handler.cpp  str_op_handler.cpp
src/builtin/: BuiltinRegistry.cpp  builtin.c
src/cmd-exec/: cmd-exec.c  cmd-exec.cpp
src/codegen/: codegen.cpp  emit_assign.cpp  emit_expr.cpp  handle_fn.cpp  handle_loops.cpp  helper.cpp  list_handler.cpp  op_handler.cpp  range_handler.cpp  str_handler.cpp
src/eval/: TQloop.c  assigner.c  binop.c  eval.c  eval_helper.c  fn_handler.c  num-str_handler.c  unop.c
src/frontend/ast/: ASTHelper.c  ASTNode.c
src/frontend/lexer/: lexer.l
src/frontend/parser/: parser.y  parser_helper.c
src/frontend/semantic/: TypeChecker.cpp  TypeResolver.cpp  seman_assign.cpp  seman_list.cpp  seman_loop.cpp  semanic.cpp  semanic_fn.cpp  semanic_unop.cpp  semantic_binop.cpp  semantic_helper.cpp  typecheck.c
src/frontend/typechecker/: assign.cpp  binop.cpp  fn.cpp  loops.cpp  unop.cpp
src/import/: import.c
src/lexer/: lexer.c  lexer.l  lexer_helpers.c
src/middle-end/HIRGen/: HIRGen.cpp  constructor.cpp  helper.cpp  (+1 more)
src/parser/: parser.y  parser_helpers.c
src/semantic/: list_handle.cpp  seman_assign.cpp  seman_loop.cpp  semanic.cpp  semanic_fn.cpp  semanic_unop.cpp  semantic_binop.cpp  semantic_helper.cpp
src/stdlibs/: exits.cpp  printer.cpp  type.cpp
src/typechecker/: typecheck.c
(+13 files in other folders)
